# p3bo

./: .gitignore  README.md  p3bo.ipynb  p3bo.py  p3bo_main.py  p3bo_test.py  pyproject.toml
flexs/: model.py
flexs/models/: levensthein.py  noisy_abstract_model.py
flexs/optimizers/: random.py
tests/: test_p3bo.py
