[tool.poetry]
name = "p3bo"
version = "0.1.0"
description = ""
authors = ["Daniel Danciu <daniel@cradle.bio>"]

[tool.poetry.dependencies]
python = "^3.10"
editdistance = "^0.6.0"
torch = "*"
numpy = "^1.23.1"
pandas = "^1.4.3"
tqdm = "^4.64.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
altair = "^5.2.0"
scipy = "^1.11.4"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
ipykernel = "^6.27.1"
poethepoet = "^0.24.4"
ruff = "^0.1.7"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format = [{ cmd = "ruff ." }, { cmd = "isort ." }]
test = "pytest"
run = "python p3bo_main.py"
